--- a/app/src/main/res/layout/custom_address.xml
+++ b/app/src/main/res/layout/custom_address.xml
@@ -22,6 +22,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/txt_distancecalculated"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
 
 </LinearLayout>
